--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ header-img: "img/about-bg.jpg"
     <blockquote><p>写写代码，做做设计，看看产品。<br>
     世界那么大，我想去看看。</p></blockquote>
 
-    <p>Hey，我是<strong>刘嘉懿</strong>，程序员 &amp。</p>
+    <p>Hey，我是<strong>刘嘉懿</strong>，程序员 。</p>
 
 </div>
 
@@ -27,7 +27,7 @@ header-img: "img/about-bg.jpg"
     <blockquote><p>Yet another Frontend Engineer. <br>
     Yet another Lifelong Designer.</p></blockquote>
 
-    <p>Hi, Here is <strong>Liu Jiayi(刘嘉懿)</strong>. I'm engineer &amp.</p>
+    <p>Hi, Here is <strong>Liu Jiayi(刘嘉懿)</strong>. I'm an engineer .</p>
 
 </div>
 
