--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@ layout: default
 		<div class="container" style="margin:0;padding:0;width:100%;">
 			<header>
 				<img width="190" height="190" src="images/hux_avatar.png">
-				<h1>Hux</h1>
+				<h1>Jiayi.Liu</h1>
 				<p>A student major in Optical and Electrical Enginerring,<br>
 					but hold a dream of Machine Learning and Artificial Intellegence.</p>
 			</header>
