--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,7 +19,7 @@ layout: default
 				<img width="190" height="190" src="images/hux_avatar.png">
 				<h1>Jiayi.Liu</h1>
 				<p>A student major in Optical and Electrical Enginerring,<br>
-					but hold a dream of Machine Learning and Artificial Intellegence.</p>
+					while hold a dream of Machine Learning and Artificial Intellegence.</p>
 			</header>
 			<div class="main">
 				<ul class="cbp_tmtimeline">
