--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,8 +18,8 @@ layout: default
 			<header>
 				<img width="190" height="190" src="images/hux_avatar.png">
 				<h1>Jiayi.Liu</h1>
-				<p>A student major in Optical and Electrical Enginerring,<br>
-					while hold a dream of Machine Learning and Artificial Intellegence.</p>
+				<p>A student major in Optical and Electrical Information,<br>
+					while hold a dream of Machine Learning and Artificial Intelligence.</p>
 			</header>
 			<div class="main">
 				<ul class="cbp_tmtimeline">
